解决response问题
